Proyecto_final.html

--- a/Proyecto_final.html
+++ b/Proyecto_final.html
@@ -7,14 +7,16 @@
     initial-scale=1.0">
     <title>Currículum Vitae</title>
     <link rel="stylesheet" href="CSS/Style_proyecto.css">
-    <link rel="stylesheet" href="CSS/style2.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;1,100&display=swap" rel="stylesheet">
 </head>
 <body>
 
 <div class="print-area">
-    <div class="header"> 
+    <div class="Cabeza"> 
             <img src="45 sin título.jpg" >
-            <div class="header-text">
+            <div class="Principal">
                 <h1>Karol Cortéz de la Ponderosa</h1>
                 <p>Analista Programadora y Técnica en Adm. de Empresas</p>
             </div>
